# tugas-akhir-algoritma

./: .gitignore  Kasir.py  LICENSE.md  Main.py  README.md  pyproject.toml  requirement.txt  setup.py
Model/: Barang.py
project/: kasir.py  main.py
src/kasir/: main.py
src/kasir/apps/: core.py  gudang.py  kasir.py
src/kasir/model/: user.py
src/kasir/tools/: db.py  tools.py
